--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     </header>
 
     <main class="section">
-        <h1>INTRODUCING MONK & PHEONIX</h1>
-    </main>
+        <h1>INTRODUCING MONK & PHEONIX!!
 
     <article class="article">
         <img src="./CSS/Resources/monk card.png" alt="Monk Card Clash Royale" height="300px" width="auto">
